# python-deps-test

./: README.md  SECURITY.md  setup.py
poetry/: pyproject.toml
pyprojecttoml/: pyproject.toml
pyprojecttoml/endorpyproject/: __init__.py  __main__.py
requirements/: requirements.txt
